# analisador-lexico-parsico-POO

./: README.md  exemplo.G  gramatica.txt  meson.build  teste.G  tokens.txt
include/: AnalisadorLexico.hpp  AnalisadorSintatico.hpp  Erro.hpp  ErroLexico.hpp  ErroSintatico.hpp  ProcessadorTexto.hpp  Token.hpp
source/: AnalisadorLexico.cpp  AnalisadorSintatico.cpp  Erro.cpp  ErroLexico.cpp  ErroSintatico.cpp  ProcessadorTexto.cpp  Token.cpp  main.cpp
